[gd_scene load_steps=18 format=3 uid="uid://bxvy1m65hlnou"]

[ext_resource type="Texture2D" uid="uid://cjsa8p6qipj7l" path="res://assets/MiniWorldSprites/Characters/Monsters/GiantAnimals/GiantCrab.png" id="1_pmv7j"]
[ext_resource type="Script" path="res://scripts/giant_crab.gd" id="1_y2rbn"]
[ext_resource type="PackedScene" uid="uid://b66dgiqklnek" path="res://scenes/killzone.tscn" id="2_4ivpw"]

[sub_resource type="AtlasTexture" id="AtlasTexture_0q4ll"]
atlas = ExtResource("1_pmv7j")
region = Rect2(0, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_rmm45"]
atlas = ExtResource("1_pmv7j")
region = Rect2(16, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_u6m46"]
atlas = ExtResource("1_pmv7j")
region = Rect2(32, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_o2c52"]
atlas = ExtResource("1_pmv7j")
region = Rect2(0, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_fktnu"]
atlas = ExtResource("1_pmv7j")
region = Rect2(16, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_l1c85"]
atlas = ExtResource("1_pmv7j")
region = Rect2(32, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_7if86"]
atlas = ExtResource("1_pmv7j")
region = Rect2(0, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_3i8ms"]
atlas = ExtResource("1_pmv7j")
region = Rect2(16, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_0xyl2"]
atlas = ExtResource("1_pmv7j")
region = Rect2(32, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_fkgtx"]
atlas = ExtResource("1_pmv7j")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_fwc88"]
atlas = ExtResource("1_pmv7j")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_oxwhk"]
atlas = ExtResource("1_pmv7j")
region = Rect2(32, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_hyqhe"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0q4ll")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rmm45")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u6m46")
}],
"loop": true,
"name": &"crab_down",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_o2c52")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fktnu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l1c85")
}],
"loop": true,
"name": &"crab_left",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7if86")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3i8ms")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0xyl2")
}],
"loop": true,
"name": &"crab_right",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fkgtx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fwc88")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oxwhk")
}],
"loop": true,
"name": &"crab_up",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7qp8q"]
size = Vector2(14, 14)

[node name="GiantCrab" type="Node2D"]
script = ExtResource("1_y2rbn")
metadata/_edit_group_ = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_hyqhe")
animation = &"crab_up"
autoplay = "crab_up"
frame_progress = 0.29312

[node name="Killzone" parent="." instance=ExtResource("2_4ivpw")]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Killzone"]
shape = SubResource("RectangleShape2D_7qp8q")

[node name="RayCastRight" type="RayCast2D" parent="."]
target_position = Vector2(10, 0)

[node name="RayCastLeft" type="RayCast2D" parent="."]
target_position = Vector2(-9, 0)

[node name="RayCastUp" type="RayCast2D" parent="."]
target_position = Vector2(0, -9)

[node name="RayCastDown" type="RayCast2D" parent="."]
target_position = Vector2(0, 9)
